# gsKLShell

./: CMakeLists.txt  README.md  getMaterialMatrix.h  gsFunctionSum.h  gsKLShell.h  gsKLShell_.cpp  gsMaterialMatrix.h  gsMaterialMatrix.hpp  gsMaterialMatrix2dComp_.cpp  gsMaterialMatrix2dIncomp_.cpp  gsMaterialMatrix3dComp_.cpp  gsMaterialMatrix3dIncomp_.cpp  gsMaterialMatrixBase.h  gsMaterialMatrixBase.hpp  gsMaterialMatrixBaseDim.h  gsMaterialMatrixBaseDim.hpp  gsMaterialMatrixBase_.cpp  gsMaterialMatrixComposite.h  gsMaterialMatrixComposite.hpp  gsMaterialMatrixComposite_.cpp  gsMaterialMatrixContainer.h  gsMaterialMatrixContainer_.cpp  gsMaterialMatrixEval.h  gsMaterialMatrixEval.hpp  gsMaterialMatrixEval_.cpp  gsMaterialMatrixIntegrate.h  gsMaterialMatrixIntegrate.hpp  gsMaterialMatrixIntegrate_.cpp  gsMaterialMatrixLinear.h  gsMaterialMatrixLinear.hpp  gsMaterialMatrixLinear_.cpp  gsMaterialMatrixTFT.h  gsMaterialMatrixTFT.hpp  gsMaterialMatrixTFT_.cpp  gsMaterialMatrixUtils.h  gsMaterialMatrixXml.h  gsMaterialMatrixXml.hpp  gsMaterialMatrixXml_.cpp  gsMaterialMatrix_.cpp  gsMaterialMatrix_AP.h  (+22 more)
bash/: strongCoupling_ALM_example.bash  strongCoupling_Error_example.bash  strongCoupling_Error_example2.bash  strongCoupling_Error_example3.bash  strongCoupling_Error_example_Andrea.bash  strongCoupling_Modal_example.bash  strongCoupling_Modal_example_car.bash  strongCoupling_Modal_example_car_pillar.bash  strongCoupling_Modal_example_car_pillar_extended.bash  weakCoupling_Error_example.bash  weakCoupling_Modal_example_car.bash  weakCoupling_Modal_example_car_pillar.bash  weakCoupling_Modal_example_car_pillar_extended.bash
doc/: example_shell2D.dox  example_shell3D.dox  gsKLShell.dox  gsMaterialMatrix.dox  gsMaterialMatrix_test.dox  gsThinShell.dox  linear_shell.dox  nonlinear_shell.dox
examples/: CMakeLists.txt  benchmark_panel.cpp  benchmark_roof.cpp  debug_panel.cpp  example_2DShellPressureBC.cpp  example_2DShellvibration.cpp  example_2DWrinkling.cpp  example_3DBuckling.cpp  example_3DMultipatchCylinder.cpp  example_parametric_panel.cpp  example_pointload.cpp  example_shell2D.cpp  example_shell2D_2.cpp  example_shell2D_5.cpp  example_shell2D_WebbBridge.cpp  example_shell2D_shear.cpp  example_shell2D_tension.cpp  example_shell2D_tension_ALM.cpp  example_shell3D.cpp  example_shell3D_DWR.cpp  example_shell3D_DWR_NL.cpp  example_shell3D_DWR_NL2.cpp  example_shell3D_DWR_buckling.cpp  example_shell3D_DWR_modal.cpp  example_shell3D_embedded.cpp  example_shellvibration.cpp  goal_function_test.cpp  gsMaterialMatrix_test.cpp  gsThinShell2D_test.cpp  gsThinShell_test.cpp  kirchhoff-Love_example2.cpp  materialMatrixTFT_test.cpp  point_load.cpp  shapeOpt_strainenergy.cpp  shapeOpt_strainenergyC.cpp  strongCoupling_ALM_example.cpp  strongCoupling_Buckling_example.cpp  strongCoupling_DR_example.cpp  strongCoupling_Error_example.cpp  (+18 more)
(+155 files in other folders)
